--- a/src/components/movie/movie.css
+++ b/src/components/movie/movie.css
@@ -1,10 +1,38 @@
 .list__movies {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
+  padding: 20px;
+}
+
+.found__res {
+  color: white;
+  padding: 20px;
 }
 
 .item {
-  flex: 1 1 24%;
+  flex: 1 1 15%;
   margin: 8px;
   cursor: pointer;
+  color: white;
+  list-style-type: none;
 }
+
+.item img {
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 12px;
+  border: 2px solid white;
+}
+
+.item div {
+  margin-bottom: 20px;
+  text-wrap: wrap;
+}
+/* Container Box.tsx */
+/* 
+.box__movie {
+  width: 50%;
+  height: ;
+} */
