--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -11,13 +11,32 @@
 }
 
 .child {
-  background: white;
+  background: grey;
   overflow: scroll;
-  height: 50vh;
+  height: 75vh;
   width: 50%;
-  margin: auto;
-  padding: 2%;
-  border: 2px solid #000;
+  /* border: 2px solid #000; */
   border-radius: 10px;
   box-shadow: 2px solid black;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.child:hover::-webkit-scrollbar-thumb {
+  background-color: purple;
+  border-radius: 10px;
+}
+
+.child:hover::-webkit-scrollbar-thumb:hover,
+.child:hover::-webkit-scrollbar-thumb:active {
+  border-radius: 10px;
+  background-color: #555;
 }
