add styling for movie details

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -15,7 +15,7 @@
   overflow: scroll;
   height: 75vh;
   width: 50%;
-  /* border: 2px solid #000; */
+  border: 2px solid white;
   border-radius: 10px;
   box-shadow: 2px solid black;
   overflow-x: hidden;
