--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -11,11 +11,11 @@
 }
 
 .child {
-  background: grey;
+  background: #030637;
   overflow: scroll;
   height: 75vh;
-  width: 50%;
-  border: 2px solid white;
+  width: 60%;
+  /* border: 2px solid white */
   border-radius: 10px;
   box-shadow: 2px solid black;
   overflow-x: hidden;
