--- a/src/main.css
+++ b/src/main.css
@@ -34,12 +34,11 @@ body:hover::-webkit-scrollbar-thumb:active {
 .separate__movie {
   display: flex;
 }
-/* When hovering over the container, show the scrollbar
-.box:hover::-webkit-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 2px;
-}
 
-.box:hover::-webkit-scrollbar-thumb:hover,
-.box:hover::-webkit-scrollbar-thumb:active {
-  background-color: #555; */
+.progressbar {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
