--- a/src/components/movie/movie.module.css
+++ b/src/components/movie/movie.module.css
@@ -30,3 +30,12 @@
   margin-bottom: 20px;
   text-wrap: wrap;
 }
+
+.pagination {
+  color: white;
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  background-color: white;
+  padding: 12px;
+}
