--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -48,3 +48,39 @@ input:focus {
   left: 25%;
   right: 25%;
 }
+
+@media screen and (max-width: 768px) {
+  .navbar__container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .navbar__input input {
+    margin-bottom: 10px;
+    width: 100%;
+    /* display: block; */
+  }
+
+  .HamburgerMenu {
+    display: block;
+    cursor: pointer;
+    padding: 10px;
+  }
+
+  .navbar__input,
+  .avatar__navbar {
+    display: block;
+  }
+
+  .avatar__navbar {
+    width: 48px;
+    height: 48px;
+    background-color: rgb(153, 112, 194);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    cursor: pointer;
+  }
+}
