--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -40,3 +40,11 @@
   border-radius: 10px;
   background-color: #555;
 }
+
+@media screen and (max-width: 768px) {
+  .child {
+    width: 90%;
+    height: 80vh;
+    /* overflow-x: scroll; */
+  }
+}
