fix: responsive layout

--- a/src/components/movie/movie.module.css
+++ b/src/components/movie/movie.module.css
@@ -40,7 +40,7 @@
   padding: 12px;
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .found__res {
     font-size: 0.75rem;
   }
