--- a/src/components/movie/watchedMovieStat/WatchedMovie.module.css
+++ b/src/components/movie/watchedMovieStat/WatchedMovie.module.css
@@ -27,14 +27,14 @@
 }
 
 .list img {
-  transition: all 0.5s;
+  transition: all 0.5s ease-in-out;
   width: 18rem;
   border-radius: 0.5rem;
   border: 1.5px solid white;
 }
 
 .list img:hover {
-  transform: scale(1.04);
+  transform: scale(1.02);
 }
 
 h2 {
@@ -98,4 +98,22 @@ h3 {
     margin: 0 auto;
     width: 100%;
   }
+}
+
+.empty__data {
+  position: relative;
+  color: red;
+  font-weight: bolder;
+  margin: 20%;
+  padding: 24px;
+  text-align: center;
+}
+
+.empty__data::after {
+  content: "";
+  display: block;
+  margin-top: 20px;
+  height: 4px;
+  background-color: white;
+  width: 100%;
 }
